# gcp_ghc19

./: CMakeLists.txt  config.h.in  main.cpp  script.sh
cmake/: default_warnings.cmake
data/: b.in.out.202569  b.in.out.202629  c.in.out.1430  c.in.out.1436  d.in.out.414810  d.in.out.414811  e.in.out.408421  stats_tag_size.txt
include/: data.h  reader.h  solver.h  writer.h
src/: CMakeLists.txt  data.cpp  data.h  reader.cpp  solver.cpp  writer.cpp
tests/: CMakeLists.txt  gtests.cpp
